--- a/views/list.ejs
+++ b/views/list.ejs
@@ -21,7 +21,7 @@
      
  </ul>
  <form action="/" method="POST">
-<input type="text" placeholder="give a todo list" name="newTodo">
+<input type="text" placeholder="give a todo item" name="newTodo">
 <button class="btn btn-primary" type="submit">Next</button>
 </form>
 </body>
